# shannon

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs
.claude/memory/: feedback_use_crates_io.md
brush-builtins/: Cargo.toml
brush-core/: Cargo.toml
brush-interactive/: Cargo.toml
brush-parser/: Cargo.toml
brush-shell/: Cargo.toml
brush/brush-experimental-builtins/: Cargo.toml
brush/fuzz/: Cargo.toml
crates/nu-cli/: Cargo.toml
crates/nu-cmd-base/: Cargo.toml
crates/nu-cmd-extra/: Cargo.toml
crates/nu-cmd-lang/: Cargo.toml
crates/nu-cmd-plugin/: Cargo.toml
crates/nu-color-config/: Cargo.toml
crates/nu-command/: Cargo.toml
crates/nu-derive-value/: Cargo.toml
crates/nu-engine/: Cargo.toml
crates/nu-experimental/: Cargo.toml
crates/nu-explore/: Cargo.toml
crates/nu-glob/: Cargo.toml
crates/nu-json/: Cargo.toml
crates/nu-lsp/: Cargo.toml
crates/nu-mcp/: Cargo.toml
crates/nu-parser/: Cargo.toml
crates/nu-path/: Cargo.toml
crates/nu-plugin/: Cargo.toml
crates/nu-plugin-core/: Cargo.toml
crates/nu-plugin-engine/: Cargo.toml
crates/nu-plugin-protocol/: Cargo.toml
crates/nu-plugin-test-support/: Cargo.toml
crates/nu-pretty-hex/: Cargo.toml
crates/nu-protocol/: Cargo.toml
crates/nu-std/: Cargo.toml
crates/nu-system/: Cargo.toml
crates/nu-table/: Cargo.toml
crates/nu-term-grid/: Cargo.toml
crates/nu-test-support/: Cargo.toml
crates/nu-test-support-macros/: Cargo.toml
crates/nu-utils/: Cargo.toml
crates/nu_plugin_custom_values/: Cargo.toml
crates/nu_plugin_example/: Cargo.toml
crates/nu_plugin_gstat/: Cargo.toml
crates/nu_plugin_inc/: Cargo.toml
crates/nuon/: Cargo.toml
docs/: 01-getting-started.md  02-architecture.md  README.md  getting-started.md
docs/features/: 01-shell-switching.md  02-state-sync.md  03-syntax-highlighting.md  04-history.md  05-tab-completion.md  06-autosuggestions.md  shell-switching.md  state-sync.md  syntax-highlighting.md  tab-completion.md
docs/reference/: 01-configuration.md  01-keybindings.md  02-configuration.md  03-supported-shells.md
experiments/0001-tree-sitter-research/: Cargo.toml
issues/: README.md
issues/0001-syntax-highlighting/: README.md
issues/0002-shell-feature-audit/: README.md
issues/0003-tab-completion/: README.md
issues/0004-screen-control/: README.md
issues/0005-bracketed-paste/: README.md
issues/0006-testing/: README.md
issues/0007-documentation/: README.md
issues/0008-shell-config/: README.md
issues/0009-history-and-hints/: README.md
issues/0010-fish-and-completions/: README.md
issues/0011-toml-config/: README.md
issues/0012-zsh-and-toggle/: README.md
issues/0013-ai-mode/: README.md
issues/0014-nushell-interactive/: README.md
issues/0015-remove-nushell-wrapper/: README.md
issues/0016-terminal-integration/: README.md
issues/0017-theming/: README.md
issues/0018-publish-crates-io/: README.md
issues/0019-shell-picker-menu/: README.md
issues/0020-ai-prompt-indicator/: README.md
issues/0021-background-color-syntax/: README.md
issues/0022-ctrl-c-signal-handling/: README.md
issues/0023-ctrl-c-clears-error/: README.md
issues/0024-per-shell-state/: README.md
issues/0025-publish-workspace/: README.md
issues/0026-ai-command/: README.md
issues/0027-shell-engine-trait/: README.md
issues/0028-version-command/: README.md
issues/0029-remove-ctrl-s/: README.md
issues/0030-ai-chat-shell/: README.md
issues/0031-completer-cwd/: README.md
issues/0032-fork-nushell-binary/: README.md
issues/0033-bash-highlighting/: README.md
issues/0034-rebrand-olshell/: README.md
issues/0035-signal-handler-conflict/: README.md
issues/0036-monorepo-restructure/: README.md
issues/0037-monorepo-full-history/: README.md
issues/0038-real-bash-subprocess/: README.md
issues/0039-minimize-nushell-fork-publishing/: README.md
issues/0040-standard-config-locations/: README.md
issues/0041-upgrade-nushell-dependencies/: 01-sync-nushell-0-113-1.md  README.md
issues/0042-homebrew-deployment/: 01-formula-tap-and-bottle.md  02-publish-through-shannonshell-tap.md  README.md
nushell/: Cargo.toml
nushell/crates/nu-cli/: Cargo.toml
nushell/crates/nu-cli/src/: config_files.rs  eval_file.rs  lib.rs  print.rs  repl.rs  util.rs
nushell/crates/nu-cli/src/commands/: keybindings.rs
nushell/crates/nu-cli/src/commands/history/: history_import.rs
nushell/crates/nu-cli/src/completions/: arg_value_completion.rs  completion_common.rs
nushell/crates/nu-cli/tests/: main.rs
nushell/crates/nu-cli/tests/completions/: mod.rs
nushell/crates/nu-cmd-plugin/: Cargo.toml
nushell/crates/nu-engine/: Cargo.toml
nushell/crates/nu-engine/src/: command_prelude.rs  env.rs
nushell/crates/nu-parser/: Cargo.toml
nushell/crates/nu-parser/src/: parse_keywords.rs
nushell/crates/nu-parser/tests/: test_parser.rs
nushell/crates/nu-table/: Cargo.toml
nushell/crates/nu-table/src/: common.rs
nushell/crates/nu_plugin_query/: Cargo.toml
nushell/crates/nu_plugin_query/src/: query_web.rs
nushell/src/: ide.rs  (+1 more)
reedline/: Cargo.toml
scripts/: build-docs.ts  build-favicon.sh  build-issues-index.sh  build.sh  install.sh  make-source-tarball.sh  png-to-webp.sh  release.sh  sync-upstream.sh  test-sigint.sh  update-completions.sh  update-themes.sh
shannon/: Cargo.toml  README.md  build.rs
shannon/src/: ai_engine.rs  brush_engine.rs  completer.rs  completions.rs  config.rs  dispatcher.rs  executor.rs  highlighter.rs  lib.rs  main.rs  nushell_engine.rs  prompt.rs  repl.rs  run.rs  theme.rs  tree_sitter_nu.rs
shannon/src/ai/: mod.rs  prompt.rs  session.rs  translate.rs
shannon/tests/: integration.rs
src/: bash_process.rs  brush_engine.rs  command.rs  completer.rs  config.rs  dispatcher.rs  executor.rs  highlighter.rs  ide.rs  lib.rs  logger.rs  main.rs  nushell_engine.rs  prompt.rs  repl.rs  run.rs  shell.rs  shell_engine.rs  signals.rs  theme.rs
tests/: integration.rs
themes/: tokyo-night.theme
website/: astro.config.mjs  package.json  tsconfig.json  vite.config.ts  wrangler.toml
(+312 files in other folders)
