[package]
name = "shannon"
edition = "2021"
version = "0.1.0"

[dependencies]
reedline = { version = "0.46.0", features = ["sqlite"] }
chrono = "0.4"
crossterm = "0.29.0"
nu-ansi-term = "0.50.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
rig-core = { version = "0.33", default-features = false, features = ["reqwest-rustls"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
dirs = "6"
tree-sitter = "0.26"
tree-sitter-bash = "0.23"
tree-sitter-nu = { git = "https://github.com/nushell/tree-sitter-nu" }
tree-sitter-fish = "3.6"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
