[package]
name = "shannonshell"
version = "0.5.0"
edition = "2024"
description = "A poly-shell built on nushell with seamless bash compatibility"
license = "MIT"
repository = "https://github.com/shannonshell/shannon"
readme = "README.md"
keywords = ["shell", "nushell", "bash", "terminal", "poly-shell"]
categories = ["command-line-utilities"]

[[bin]]
name = "shannon"
path = "src/main.rs"

[dependencies]
# Reedline line editor
reedline = { version = "0.46.0", path = "reedline", features = ["sqlite", "bashisms"] }

# Nushell library crates
nu-cli = { version = "0.111.0", path = "nushell/crates/nu-cli", package = "shannon-nu-cli", default-features = false, features = ["plugin"] }
nu-cmd-base = { version = "0.111.0", path = "nushell/crates/nu-cmd-base" }
nu-cmd-extra = { version = "0.111.0", path = "nushell/crates/nu-cmd-extra" }
nu-cmd-lang = { version = "0.111.0", path = "nushell/crates/nu-cmd-lang" }
nu-command = { version = "0.111.0", path = "nushell/crates/nu-command", default-features = false, features = ["os"] }
nu-engine = { version = "0.111.0", path = "nushell/crates/nu-engine", features = ["os"] }
nu-explore = { version = "0.111.0", path = "nushell/crates/nu-explore" }
nu-experimental = { version = "0.111.0", path = "nushell/crates/nu-experimental" }
nu-lsp = { version = "0.111.0", path = "nushell/crates/nu-lsp", package = "shannon-nu-lsp" }
nu-parser = { version = "0.111.0", path = "nushell/crates/nu-parser" }
nu-path = { version = "0.111.0", path = "nushell/crates/nu-path" }
nu-protocol = { version = "0.111.0", path = "nushell/crates/nu-protocol", features = ["os"] }
nu-std = { version = "0.111.0", path = "nushell/crates/nu-std" }
nu-system = { version = "0.111.0", path = "nushell/crates/nu-system" }
nu-utils = { version = "0.111.0", path = "nushell/crates/nu-utils" }

# Optional nushell crates
nu-cmd-plugin = { version = "0.111.0", path = "nushell/crates/nu-cmd-plugin", optional = true }
nu-plugin-engine = { version = "0.111.0", path = "nushell/crates/nu-plugin-engine", optional = true }
nu-mcp = { version = "0.111.0", path = "nushell/crates/nu-mcp", optional = true }

# Core deps
crossterm = "0.29.0"
ctrlc = "3.5"
chrono = "0.4"
dirs = "6"
lexopt = "0.3"
libc = "0.2"
log = "0.4"
miette = { version = "7.6", features = ["fancy-no-backtrace", "fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tempfile = "3"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
same-file = "1.0"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.30", default-features = false, features = ["signal", "process", "fs", "term"] }

[features]
default = ["plugin", "sqlite", "trash-support"]
plugin = ["nu-cmd-plugin", "nu-plugin-engine"]
sqlite = ["nu-cli/sqlite", "nu-command/sqlite", "nu-std/sqlite", "nu-protocol/sqlite", "reedline/sqlite"]
trash-support = ["nu-command/trash-support"]
mcp = ["nu-mcp"]
network = ["nu-command/network"]
rustls-tls = []
