[package]
name = "shannonshell"
version = "0.1.3"
edition = "2021"
description = "An AI-first shell with seamless access to bash, nushell, and any other shell"
license = "MIT"
repository = "https://github.com/user/shannon"
readme = "README.md"
keywords = ["shell", "nushell", "bash", "ai", "terminal"]
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "build.rs",
    "completions/**/*.fish",
    "themes/**/*.theme",
    "tree-sitter-nu/**/*.c",
    "tree-sitter-nu/**/*.h",
    "tree-sitter-nu/**/*.json",
    "tree-sitter-nu/LICENSE",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[[bin]]
name = "shannon"
path = "src/main.rs"

[dependencies]
reedline = { version = "0.46.0", features = ["sqlite"] }
chrono = "0.4"
crossterm = "0.29.0"
nu-ansi-term = "0.50.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
rig-core = { version = "0.33", default-features = false, features = ["reqwest-rustls"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
libc = "0.2"
signal-hook = "0.3"
dirs = "6"
tree-sitter = "0.26"
tree-sitter-bash = "0.23"
tree-sitter-language = "0.1"
tree-sitter-fish = "3.6"

# Nushell as a library (native evaluation, no -c wrapper)
nu-cli = { version = "0.111", default-features = false }
nu-engine = { version = "0.111", features = ["os"] }
nu-protocol = { version = "0.111", features = ["os"] }
nu-command = { version = "0.111", default-features = false, features = ["os"] }
nu-cmd-lang = { version = "0.111" }
nu-parser = { version = "0.111" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
cc = "1"
