[package]
name = "shannonshell"
version = "0.3.2"
edition = "2024"
description = "An AI-first shell with seamless access to bash, nushell, and any other shell"
license = "MIT"
repository = "https://github.com/shannonshell/shannon"
readme = "README.md"
keywords = ["shell", "nushell", "bash", "ai", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "shannon"
path = "src/main.rs"

[dependencies]
# Reedline line editor
reedline = { path = "../reedline", version = "0.46.0", package = "shannon-reedline", features = ["sqlite", "bashisms"] }

# Nushell library crates
nu-cli = { path = "../nushell/crates/nu-cli", version = "0.111.2", package = "shannon-nu-cli", default-features = false, features = ["plugin"] }
nu-cmd-base = { path = "../nushell/crates/nu-cmd-base", version = "0.111.2", package = "shannon-nu-cmd-base" }
nu-cmd-extra = { path = "../nushell/crates/nu-cmd-extra", version = "0.111.2", package = "shannon-nu-cmd-extra" }
nu-cmd-lang = { path = "../nushell/crates/nu-cmd-lang", version = "0.111.2", package = "shannon-nu-cmd-lang" }
nu-command = { path = "../nushell/crates/nu-command", version = "0.111.2", package = "shannon-nu-command", default-features = false, features = ["os"] }
nu-engine = { path = "../nushell/crates/nu-engine", version = "0.111.2", package = "shannon-nu-engine", features = ["os"] }
nu-explore = { path = "../nushell/crates/nu-explore", version = "0.111.2", package = "shannon-nu-explore" }
nu-experimental = { path = "../nushell/crates/nu-experimental", version = "0.111.2", package = "shannon-nu-experimental" }
nu-lsp = { path = "../nushell/crates/nu-lsp", version = "0.111.2", package = "shannon-nu-lsp" }
nu-parser = { path = "../nushell/crates/nu-parser", version = "0.111.2", package = "shannon-nu-parser" }
nu-path = { path = "../nushell/crates/nu-path", version = "0.111.2", package = "shannon-nu-path" }
nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.111.2", package = "shannon-nu-protocol", features = ["os"] }
nu-std = { path = "../nushell/crates/nu-std", version = "0.111.2", package = "shannon-nu-std" }
nu-system = { path = "../nushell/crates/nu-system", version = "0.111.2", package = "shannon-nu-system" }
nu-utils = { path = "../nushell/crates/nu-utils", version = "0.111.2", package = "shannon-nu-utils" }

# Optional nushell crates
nu-cmd-plugin = { path = "../nushell/crates/nu-cmd-plugin", version = "0.111.2", package = "shannon-nu-cmd-plugin", optional = true }
nu-plugin-engine = { path = "../nushell/crates/nu-plugin-engine", version = "0.111.2", package = "shannon-nu-plugin-engine", optional = true }
nu-mcp = { path = "../nushell/crates/nu-mcp", version = "0.111.2", package = "shannon-nu-mcp", optional = true }

# Brush (embedded bash)
brush-core = { path = "../brush/brush-core", version = "0.4.0", package = "shannon-brush-core" }
brush-builtins = { path = "../brush/brush-builtins", version = "0.1.0", package = "shannon-brush-builtins" }

# AI provider
rig-core = { version = "0.33", default-features = false, features = ["reqwest-rustls"] }

# Core deps
crossterm = "0.29.0"
ctrlc = "3.5"
chrono = "0.4"
dirs = "6"
lexopt = "0.3"
libc = "0.2"
log = "0.4"
miette = { version = "7.6", features = ["fancy-no-backtrace", "fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tempfile = "3"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
same-file = "1.0"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.30", default-features = false, features = ["signal", "process", "fs", "term"] }

[features]
default = ["plugin", "sqlite", "trash-support"]
plugin = ["nu-cmd-plugin", "nu-plugin-engine"]
sqlite = ["nu-cli/sqlite", "nu-command/sqlite", "nu-std/sqlite", "nu-protocol/sqlite", "reedline/sqlite"]
trash-support = ["nu-command/trash-support"]
mcp = ["nu-mcp"]
network = ["nu-command/network"]
rustls-tls = []
