[package]
authors = ["The Nushell Project Developers"]
description = "The foundation tools to build Nushell commands."
edition = "2024"
license = "MIT"
name = "shannon-nu-cmd-base"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-base"
version = "0.111.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.111.1", default-features = false, package = "shannon-nu-engine"}
nu-parser = { path = "../nu-parser", version = "0.111.1", package = "shannon-nu-parser"}
nu-path = { path = "../nu-path", version = "0.111.1", package = "shannon-nu-path"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", default-features = false, package = "shannon-nu-protocol"}

indexmap = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
