[package]
authors = ["The Nushell Project Developers"]
description = "Color configuration code used by Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-color-config"
edition = "2024"
license = "MIT"
name = "shannon-nu-color-config"
version = "0.111.1"

[lib]
bench = false
harness = false

[lints]
workspace = true

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.111.1", default-features = false, package = "shannon-nu-protocol"}
nu-engine = { path = "../nu-engine", version = "0.111.1", default-features = false, package = "shannon-nu-engine"}
nu-json = { path = "../nu-json", version = "0.111.1", package = "shannon-nu-json"}
nu-ansi-term = { workspace = true }

serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
nu-test-support = { path = "../nu-test-support", version = "0.111.1", package = "shannon-nu-test-support"}
