[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's integrated LSP server"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-lsp"
name = "shannon-nu-lsp"
version = "0.111.1"
edition = "2024"
license = "MIT"

[dependencies]
nu-cli = { path = "../nu-cli", version = "0.111.1", package = "shannon-nu-cli"}
nu-glob = { path = "../nu-glob", version = "0.111.1", package = "shannon-nu-glob"}
nu-parser = { path = "../nu-parser", version = "0.111.1", package = "shannon-nu-parser"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", package = "shannon-nu-protocol"}
nu-utils = { path = "../nu-utils", version = "0.111.1", package = "shannon-nu-utils"}

crossbeam-channel = { workspace = true }
fancy-regex = { workspace = true }
lsp-server = { workspace = true }
lsp-textdocument = { workspace = true }
lsp-types = { workspace = true }
memchr = { workspace = true }
miette = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
