[package]
authors = ["The Nushell Project Developers"]
description = "Functionality for running Nushell plugins from a Nushell engine"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-plugin-engine"
edition = "2024"
license = "MIT"
name = "shannon-nu-plugin-engine"
version = "0.111.1"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.111.1", package = "shannon-nu-engine"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", package = "shannon-nu-protocol"}
nu-system = { path = "../nu-system", version = "0.111.1", package = "shannon-nu-system"}
nu-plugin-protocol = { path = "../nu-plugin-protocol", version = "0.111.1", package = "shannon-nu-plugin-protocol"}
nu-plugin-core = { path = "../nu-plugin-core", version = "0.111.1", default-features = false, package = "shannon-nu-plugin-core"}
nu-utils = { path = "../nu-utils", version = "0.111.1", package = "shannon-nu-utils"}

serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
typetag = "0.2"

[features]
default = ["local-socket"]
local-socket = ["nu-plugin-core/local-socket"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
  # For setting process creation flags
  "Win32_System_Threading",
] }
