[package]
name = "shannon-nu-plugin-test-support"
version = "0.111.2"
edition = "2024"
license = "MIT"
description = "Testing support for Nushell plugins"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-plugin-test-support"

[lib]
bench = false

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.111.1", features = ["plugin"], package = "shannon-nu-engine"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", features = ["plugin"], package = "shannon-nu-protocol"}
nu-parser = { path = "../nu-parser", version = "0.111.1", features = ["plugin"], package = "shannon-nu-parser"}
nu-plugin = { path = "../nu-plugin", version = "0.111.1", package = "shannon-nu-plugin"}
nu-plugin-core = { path = "../nu-plugin-core", version = "0.111.1", package = "shannon-nu-plugin-core"}
nu-plugin-engine = { path = "../nu-plugin-engine", version = "0.111.1", package = "shannon-nu-plugin-engine"}
nu-plugin-protocol = { path = "../nu-plugin-protocol", version = "0.111.1", package = "shannon-nu-plugin-protocol"}
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.111.1", package = "shannon-nu-cmd-lang"}
nu-ansi-term = { workspace = true }
similar = "2.7"

[dev-dependencies]
typetag = "0.2"
serde = "1.0"
