[package]
authors = ["The Nushell Project Developers"]
description = "Functionality for building Nushell plugins"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-plugin"
edition = "2024"
license = "MIT"
name = "shannon-nu-plugin"
version = "0.111.2"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.111.1", features = ["plugin"], package = "shannon-nu-engine"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", features = ["plugin"], package = "shannon-nu-protocol"}
nu-plugin-protocol = { path = "../nu-plugin-protocol", version = "0.111.1", package = "shannon-nu-plugin-protocol"}
nu-plugin-core = { path = "../nu-plugin-core", version = "0.111.1", default-features = false, package = "shannon-nu-plugin-core"}
nu-utils = { path = "../nu-utils", version = "0.111.1", package = "shannon-nu-utils"}

log = { workspace = true }
thiserror = "2.0.18"

[dev-dependencies]
serde = { workspace = true }
typetag = "0.2"

[features]
default = ["local-socket"]
local-socket = ["nu-plugin-core/local-socket"]

[target.'cfg(target_family = "unix")'.dependencies]
# For setting the process group ID (EnterForeground / LeaveForeground)
nix = { workspace = true, default-features = false, features = ["process"] }
