[package]
authors = ["The Nushell Project Developers"]
description = "The standard library of Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-std"
edition = "2024"
license = "MIT"
name = "shannon-nu-std"
version = "0.111.2"

[dependencies]
nu-parser = { version = "0.111.1", path = "../nu-parser", package = "shannon-nu-parser"}
nu-protocol = { version = "0.111.1", path = "../nu-protocol", default-features = false, package = "shannon-nu-protocol"}
nu-engine = { version = "0.111.1", path = "../nu-engine", default-features = false, package = "shannon-nu-engine"}
miette = { workspace = true, features = ["fancy-no-backtrace"] }

log = "0.4"

[lints]
workspace = true

[features]
sqlite = []

