[package]
authors = ["The Nushell Project Developers"]
description = "Macros for nu-test-support"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-test-support-macros"
edition = "2024"
license = "MIT"
name = "shannon-nu-test-support-macros"
version = "0.111.1"

[lib]
proc-macro = true

[dependencies]
nu-experimental = { path = "../nu-experimental", version = "0.111.1", package = "shannon-nu-experimental"}

heck = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }