[package]
authors = ["The Nushell Project Developers"]
description = "Support for writing Nushell tests"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-test-support"
edition = "2024"
license = "MIT"
name = "shannon-nu-test-support"
version = "0.111.1"

[lib]
doctest = false
bench = false

[lints]
workspace = true

[features]
os = [
  "nu-cmd-lang/os",
  "nu-command/os",
  "nu-engine/os",
  "nu-protocol/os",
  "nu-utils/os",
]
network = ["nu-command/network"]
rustls-tls = ["nu-command/rustls-tls"]

[dependencies]
nu-cmd-extra = { path = "../nu-cmd-extra", version = "0.111.1", default-features = false, package = "shannon-nu-cmd-extra"}
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.111.1", default-features = false, package = "shannon-nu-cmd-lang"}
nu-command = { path = "../nu-command", version = "0.111.1", default-features = false, package = "shannon-nu-command"}
nu-engine = { path = "../nu-engine", version = "0.111.1", default-features = false, package = "shannon-nu-engine"}
nu-experimental = { path = "../nu-experimental", version = "0.111.1", default-features = false, package = "shannon-nu-experimental"}
nu-glob = { path = "../nu-glob", version = "0.111.1", default-features = false, package = "shannon-nu-glob"}
nu-parser = { path = "../nu-parser", version = "0.111.1", default-features = false, package = "shannon-nu-parser"}
nu-path = { path = "../nu-path", version = "0.111.1", default-features = false, package = "shannon-nu-path"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", default-features = false, package = "shannon-nu-protocol"}
nu-std = { path = "../nu-std", version = "0.111.1", default-features = false, package = "shannon-nu-std"}
nu-test-support-macros = { path = "../nu-test-support-macros", version = "0.111.1", default-features = false, package = "shannon-nu-test-support-macros"}
nu-utils = { path = "../nu-utils", version = "0.111.1", default-features = false, package = "shannon-nu-utils"}

itertools = { workspace = true }
kitest = { workspace = true }
lexopt = { workspace = true }
linkme = { workspace = true }
nu-ansi-term = { workspace = true }
num-format = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }

[target.'cfg(unix)'.dependencies]
gatekeeper = { workspace = true }
