[package]
authors = ["The Nushell Project Developers"]
description = "CLI-related functionality for Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cli"
edition = "2024"
license = "MIT"
name = "shannon-nu-cli"
version = "0.111.2"
autotests = false

[lib]
bench = false
harness = false

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[dev-dependencies]
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.111.1", package = "shannon-nu-cmd-lang"}
nu-command = { path = "../nu-command", version = "0.111.1", package = "shannon-nu-command"}
nu-std = { path = "../nu-std", version = "0.111.1", package = "shannon-nu-std"}
nu-test-support = { path = "../nu-test-support", version = "0.111.1", package = "shannon-nu-test-support"}
rstest = { workspace = true, default-features = false }
tempfile = { workspace = true }

[dependencies]
nu-cmd-base = { path = "../nu-cmd-base", version = "0.111.1", package = "shannon-nu-cmd-base"}
nu-command = { path = "../nu-command", version = "0.111.1", features = ["os"], default-features = false, package = "shannon-nu-command"}
nu-engine = { path = "../nu-engine", version = "0.111.1", features = ["os"], package = "shannon-nu-engine"}
nu-glob = { path = "../nu-glob", version = "0.111.1", package = "shannon-nu-glob"}
nu-path = { path = "../nu-path", version = "0.111.1", package = "shannon-nu-path"}
nu-parser = { path = "../nu-parser", version = "0.111.1", package = "shannon-nu-parser"}
nu-plugin-engine = { path = "../nu-plugin-engine", version = "0.111.1", optional = true, package = "shannon-nu-plugin-engine"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", features = ["os"], package = "shannon-nu-protocol"}
nu-utils = { path = "../nu-utils", version = "0.111.1", package = "shannon-nu-utils"}
nu-color-config = { path = "../nu-color-config", version = "0.111.1", package = "shannon-nu-color-config"}
nu-experimental = { path = "../nu-experimental", version = "0.111.1", package = "shannon-nu-experimental"}
nu-ansi-term = { workspace = true }
reedline = { workspace = true, features = ["bashisms"] }
tree-sitter = "0.26"
tree-sitter-bash = "0.23"
tree-sitter-language = "0.1"

chrono = { default-features = false, features = ["std"], workspace = true }
crossterm = { workspace = true }
fancy-regex = { workspace = true }
is_executable = { workspace = true }
log = { workspace = true }
lscolors = { workspace = true, default-features = false, features = ["nu-ansi-term"] }
miette = { workspace = true, features = ["fancy-no-backtrace"] }
nucleo-matcher = { workspace = true }
percent-encoding = { workspace = true }
sysinfo = { workspace = true }
strum = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
which = { workspace = true }

[features]
plugin = ["nu-plugin-engine"]
system-clipboard = ["reedline/system_clipboard"]
sqlite = ["reedline/sqlite", "nu-protocol/sqlite", "nu-command/sqlite"]

[lints]
workspace = true
