[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's evaluation engine"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-engine"
edition = "2024"
license = "MIT"
name = "shannon-nu-engine"
version = "0.111.2"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.111.1", default-features = false, package = "shannon-nu-protocol"}
nu-experimental = { path = "../nu-experimental", version = "0.111.1", package = "shannon-nu-experimental"}
nu-path = { path = "../nu-path", version = "0.111.1", package = "shannon-nu-path"}
nu-glob = { path = "../nu-glob", version = "0.111.1", package = "shannon-nu-glob"}
nu-utils = { path = "../nu-utils", version = "0.111.1", default-features = false, package = "shannon-nu-utils"}
fancy-regex = { workspace = true }
log = { workspace = true }

[features]
default = ["os"]
os = [
  "nu-protocol/os",
  "nu-utils/os",
]
plugin = [
  "nu-protocol/plugin",
  "os",
]
