[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's parser"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-parser"
edition = "2024"
license = "MIT"
name = "shannon-nu-parser"
version = "0.111.2"
exclude = ["/fuzz"]

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.111.1", default-features = false, package = "shannon-nu-engine"}
nu-path = { path = "../nu-path", version = "0.111.1", package = "shannon-nu-path"}
nu-plugin-engine = { path = "../nu-plugin-engine", optional = true, version = "0.111.1", package = "shannon-nu-plugin-engine"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", default-features = false, package = "shannon-nu-protocol"}
nu-utils = { path = "../nu-utils", version = "0.111.1", default-features = false, package = "shannon-nu-utils"}
nu-experimental = { path = "../nu-experimental", version = "0.111.1", package = "shannon-nu-experimental"}

bytesize = { workspace = true }
chrono = { default-features = false, features = ['std'], workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true, default-features = false }

[features]
plugin = ["nu-plugin-engine"]
