[package]
authors = ["The Nushell Project Developers"]
description = "A Nushell plugin to query JSON, XML, and various web data"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu_plugin_query"
edition = "2024"
license = "MIT"
name = "shannon-nu_plugin_query"
version = "0.111.1"

[lib]
doctest = false
bench = false

[[bin]]
name = "nu_plugin_query"
bench = false

[dependencies]
nu-plugin = { path = "../nu-plugin", version = "0.111.1", package = "shannon-nu-plugin"}
nu-protocol = { path = "../nu-protocol", version = "0.111.1", package = "shannon-nu-protocol"}

gjson = "0.8.1"
scraper = { default-features = false, version = "0.26" }
sxd-document = "0.3"
sxd-xpath = "0.4"
webpage = { version = "2.0.1", features = ["serde"] }
serde_json.workspace = true
serde.workspace = true
